// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs ban demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="normal"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs base demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="t-tabs"
    modelvalue="1"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
  <!-- 方式二：使用 list 定义 Tab -->
  <div
    class="t-tabs"
    modelvalue="1"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs combination demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  style="width: 100%;"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="normal"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
    modelvalue="1"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs custom demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <p>
      可以动态增加选项卡，仅支持卡片型
    </p>
  </div>
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </div>
        </div>
        
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <!---->
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs icon demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="normal"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs operation demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <p>
      可以动态增加选项卡，仅支持卡片型
    </p>
  </div>
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </div>
        </div>
        
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <!---->
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs position demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      modelvalue="top"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           top 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           right 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           bottom 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           left 
          
          
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!---->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!---->
          </transition-stub>
          <!---->
        </div>
        
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate3d(0px, 0, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs size demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-tabs"
    >
      
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub>
              <!---->
            </transition-stub>
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub>
              <!---->
            </transition-stub>
            <!---->
          </div>
          
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate3d(0px, 0, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        
        
      </div>
      
    </div>
    <div
      class="t-tabs"
    >
      
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub>
              <!---->
            </transition-stub>
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub>
              <!---->
            </transition-stub>
            <!---->
          </div>
          
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate3d(0px, 0, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        
        
      </div>
      
    </div>
  </div>
</div>
`;
